# e-rocket

./: .gitignore  .gitmodules  README.md
Documentation/Bibliography/: Bibliography.bib  Preamble_commands.tex  main.tex
Documentation/Instruction Manual/: Preamble_commands.tex
Documentation/Report 1/experiment/: plot_data.py
Documentation/Report 2/: main.tex
Instruction Manual/: main.tex
PX4 Params/: quadcopter_1_dof.params  quadcopter_arena.params  quadcopter_arena_mocap.params  quadcopter_before_taguspark_arena_test.params  quadcopter_demo_1.params  quadcopter_demo_2.params  quadcopter_gps.params
Reports/Report 1/: main.tex
Reports/Report 1/code/: offboard_control.cpp
Reports/Report 1/experiment/: data.csv  plot_data.py
workspace_erocket/: CONTROLLER.xml  mprocs.yaml  todo.md
workspace_erocket/src/erocket/: CMakeLists.txt  README.md  package.xml
workspace_erocket/src/px4_ros_demos/: package.xml
workspace_erocket/trajectory/: soft_trajectories_setpoints.h
ws_sensor_combined/: CONTROLLER.xml  mprocs.yaml  todo.md
ws_sensor_combined/rosbag2_2025_05_27-16_48_39/: metadata.yaml
ws_sensor_combined/rosbag2_2025_05_27-16_53_30/: metadata.yaml
ws_sensor_combined/rosbag2_2025_05_27-16_57_35/: metadata.yaml
ws_sensor_combined/rosbag2_2025_05_27-17_01_14/: metadata.yaml
ws_sensor_combined/rosbag2_2025_05_28-11_31_56/: metadata.yaml
ws_sensor_combined/rosbag2_2025_05_28-11_31_56/outer_ring_setpoint_test/: actuator_motors.csv  actuator_servos.csv  controller_inputs_outputs.csv  sensor_accel.csv  sensor_baro.csv  sensor_combined.csv  sensor_gyro.csv  sensor_mag.csv  vehicle_acceleration.csv  vehicle_angular_velocity.csv  vehicle_attitude.csv  vehicle_imu.csv  (+1 more)
ws_sensor_combined/rosbag2_2025_05_28-11_46_08/: metadata.yaml
ws_sensor_combined/rosbag2_2025_06_04-15_38_47/: metadata.yaml
ws_sensor_combined/src/one_degree_freedom/: CMakeLists.txt  package.xml
ws_sensor_combined/src/one_degree_freedom/config/: hitl.yaml  hitl_simulator.yaml  offboard.yaml  sitl.yaml
ws_sensor_combined/src/one_degree_freedom/include/one_degree_freedom/: constants.hpp  frame_transforms.h  setpoints.h  vehicle_constants.hpp
ws_sensor_combined/src/one_degree_freedom/include/one_degree_freedom/controller/: allocator.hpp  setpoint.hpp  state.hpp
ws_sensor_combined/src/one_degree_freedom/include/one_degree_freedom/controller/impls/: attitude_pid.hpp  generic_controller.hpp  position_pid.hpp
ws_sensor_combined/src/one_degree_freedom/include/one_degree_freedom/mission/: take_off_and_landing.hpp
ws_sensor_combined/src/one_degree_freedom/launch/: controller_test.launch.py  controller_test_node.launch.py  controller_tester.launch.py  flight_mode_test.launch.py  hitl_no_feedback.launch.py  mocap_forwarder.launch.py  mocap_forwarder_test.launch.py  offboard_computer.launch.py  offboard_computer_hitl_simulator.launch.py  px4_ros2_communication_test.launch.py  px4_ros2_flight_mode_test.launch.py  px4_ros2_message_mapping_test.launch.py  sitl_no_feedback.launch.py
ws_sensor_combined/src/one_degree_freedom/msg/: AllocatorDebug.msg  AttitudeControllerDebug.msg  ControllerDebug.msg  ControllerInputAngularRate.msg  ControllerInputAttitude.msg  ControllerInputSetpoint.msg  ControllerOutputMotorThrust.msg  ControllerOutputServoTiltAngle.msg  ControllerOutputTiltAngle.msg  FlightMode.msg  FlightModeRequest.msg  FlightModeResponse.msg  PositionControllerDebug.msg  SetpointC5.msg  TrajectorySetpoint.msg
ws_sensor_combined/src/one_degree_freedom/src/: controller.cpp  controller.cpp.bak  controller_tester.cpp  flight_control.hpp  flight_mode.cpp  mission.cpp  mocap_forwarder.cpp  pid_controller.py  px4_ros2_communication.cpp  px4_ros2_flight_mode.cpp  px4_ros2_message_mapping.cpp
ws_sensor_combined/src/one_degree_freedom/src/lib/: frame_transforms.cpp
ws_sensor_combined/src/one_degree_freedom/srv/: FlightMode.srv
ws_sensor_combined/src/one_degree_freedom/test/: controller_test_node.cpp  pipeline_io_test.py
ws_sensor_combined/src/one_degree_freedom/test/controller/: controller_simulator.cpp  controller_test.cpp  controller_test_node.cpp
ws_sensor_combined/src/one_degree_freedom/test/px4_ros2_communication/: flight_mode_test.cpp  mocap_forwarder_test.cpp  px4_ros2_communication_test.cpp  px4_ros2_flight_mode_test.cpp  px4_ros2_message_mapping_test.cpp
ws_sensor_combined/src/one_degree_freedom/test/simulator/: simulator.cpp
ws_sensor_combined/src/one_degree_freedom/test/sitl/: mock_flight_mode.cpp
ws_sensor_combined/src/px4_ros_com/: CMakeLists.txt  package.xml
ws_sensor_combined/src/px4_ros_com/include/px4_ros_com/: constants.hpp  frame_transforms.h
ws_sensor_combined/src/px4_ros_com/launch/: 1_degree_freedom.launch.py  1_degree_freedom_controller_tester.launch.py  actuator_motors.launch.py  actuator_servos.launch.py  offboard_control.launch.py  sensor_accel.launch.py  sensor_baro.launch.py  sensor_combined.launch.py  sensor_gps.launch.py  sensor_gyro.launch.py  sensor_mag.launch.py  vehicle_angular_velocity.launch.py  vehicle_attitude.launch.py  vehicle_global_position.launch.py  vehicle_local_position.launch.py
ws_sensor_combined/src/px4_ros_com/msg/: ControllerDebug.msg  ControllerInputAngularRate.msg  ControllerInputAttitude.msg  ControllerInputSetpoint.msg  EulerAngle.msg
ws_sensor_combined/src/px4_ros_com/src/1_degree_freedom/: controller.cpp  controller_tester.cpp
ws_sensor_combined/src/px4_ros_com/src/demos/: actuator_motors.cpp  actuator_servos.cpp  hello_world.cpp  offboard_control.cpp  sensor_accel.cpp  sensor_baro.cpp  sensor_gps.cpp  sensor_gyro.cpp  sensor_mag.cpp  vehicle_angular_velocity.cpp  vehicle_attitude.cpp  vehicle_global_position.cpp  vehicle_local_position.cpp
ws_sensor_combined/src/px4_ros_com/src/examples/listeners/: sensor_combined.cpp
ws_sensor_combined/src/px4_ros_demos/: CMakeLists.txt  README.md
ws_sensor_combined/src/px4_ros_demos/launch/: offboard_control.launch.py  sensor_combined.launch.py
ws_sensor_combined/src/px4_ros_demos/src/: sensor_combined.cpp
ws_sensor_combined/trajectory/: csv_to_header_with_transform_to_ned.py
(+89 files in other folders)
